<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:orientation="horizontal">

    <com.xh3140.core.widgets.button.NiceButton
        android:id="@+id/buttonCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/common_calculate_data"
        app:colorStyle="THEME_BLUE"
        app:location="LEFT" />

    <com.xh3140.core.widgets.button.NiceButton
        android:id="@+id/buttonRandom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/common_random_data"
        app:colorStyle="THEME_CYAN"
        app:location="HORIZONTAL_BETWEEN" />

    <com.xh3140.core.widgets.button.NiceButton
        android:id="@+id/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/common_clear_data"
        app:colorStyle="THEME_RED"
        app:location="RIGHT" />
</LinearLayout>
